--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SpinkTweet</title>
+  <title>SpinkChat</title>
   <style>
     body {
       margin: 0;
@@ -142,9 +142,9 @@
 </head>
 <body>
 
-<header>SpinkTweet</header>
+<header>SpinkChat</header>
 <textarea id="tweetInput" rows="3" placeholder="What's happening?"></textarea>
-<button id="sendBtn">Tweet</button>
+<button id="sendBtn">Chat</button>
 <div id="feed"></div>
 
 <button class="dark-mode">Dark Mode</button>
