--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <h2>Welcome! Please enter your details:</h2>
     <input type="text" id="firstName" placeholder="First Name (Optional)">
     <input type="text" id="lastName" placeholder="Last Name (Optional)">
-    <input type="file" id="photoInput" accept="image/*" placeholder="Upload a photo (Optional)">
+    <input type="file" id="photoInput" accept="image/*" placeholder="(Photo's Dont Work)">
     <button onclick="saveUserInfo()">Save</button>
   </div>
 </div>
